--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "escape-string-regexp": "^1.0.5",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "enzyme-adapter-react-16": "^1.1.0",
