--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
+    "react-throttle": "^0.3.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
